--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,105 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --primary: #3d737f;
+  --secondary: #8c38ff;
+  /* --dark: hsl(218, 33%, 11%); */
+  --dark: #07161b;
+  --light: #eee;
+  --font: #cec7bf;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Fira Sans", sans-serif;
+}
+
+body {
+  background-color: var(--light);
+}
+
+.App {
+  display: flex;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+}
+
+.calculator {
+  width: 100%;
+  max-width: 400px;
+  height: 500px;
+  background-color: #fff;
+  border-radius: 16px;
+  overflow: hidden;
+  box-shadow: 0px 2px 64px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  background-color: var(--primary);
+}
+
+.display {
+  padding: 16px;
+  text-align: right;
+  background-color: var(--dark);
+  color: var(--light);
+  font-size: 24px;
+  font-weight: 300;
+}
+
+.display span {
+  font-size: 14px;
+  color: #888;
+}
+
+button {
+  appearance: none;
+  border: none;
+  outline: none;
+  color: var(--font);
+  font-size: 20px;
+  padding: 16px;
+  cursor: pointer;
+  transition: 200ms;
+}
+
+button:hover {
+  opacity: 0.9;
+}
+
+.operators {
+  display: flex;
+}
+
+.operators button {
+  flex: 1 1 0%;
+  background-color: var(--primary);
+  font-weight: 700;
+  color: #fff;
+}
+
+.operators button:hover {
+  background-color: hsl(191, 35%, 47%);
+}
+
+.operators button:active {
+  background-color: hsl(340, 76%, 80%);
+}
+
+.digits {
+  flex-grow: 1;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: stretch;
+}
+
+.digits button {
+  flex: 1 1 33.333%;
+  max-width: 33.333%;
+  background-color: var(--dark);
+}
+
+.digits button:active {
+  background-color: hsl(218, 33%, 50%);
 }
