--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  background-color: var(--light);
+  background-color: #333;
 }
 
 .App {
@@ -44,8 +44,9 @@ body {
   text-align: right;
   background-color: var(--dark);
   color: var(--light);
-  font-size: 24px;
+  font-size: 30px;
   font-weight: 300;
+  line-height: 40px;
 }
 
 .display span {
